fix: refactor RedirectHandler and CommandRunner for cleaner I/O handling, streamlined logic, and consistent token management